# spock

./: Cargo.toml  PKGBUILD  README  README.md
src/: CMakeLists.txt  cpp.rs  git.rs  main.rs
src/test/: CMakeLists.txt  example.cpp
templates/cpp/: CMakeLists.txt  CMakeLists.txt.all  external.project.cmake
templates/cpp/src/: CMakeLists.txt.exec  CMakeLists.txt.lib  example.cpp.exec  example.cpp.lib
templates/cpp/test/: CMakeLists.txt.test  example.cpp.test
tests/: cpp.rs
